--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="
+  background: #141E30;
+  background: -webkit-linear-gradient(to right, #243B55, #141E30);  
+  background: linear-gradient(to right, #243B55, #141E30)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
